--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -95,6 +95,7 @@
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edtPhonenumber"
             android:layout_width="match_parent"
+            android:inputType="number"
             android:layout_height="wrap_content"
             android:fontFamily="@font/helveticaneue_light"/>
 
