--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -117,7 +117,28 @@
             android:fontFamily="@font/helveticaneue_bold"
             android:textSize="20sp"
             android:layout_marginTop="10dp"
-            android:text="035 8233148 (Thắng)"
+            android:text="035 8233148 (Đoàn)"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="20sp"
+            android:fontFamily="@font/helveticaneue_light"
+            android:text="Holine 4: "
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:fontFamily="@font/helveticaneue_bold"
+            android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            android:text="035 8233256 (Chí)"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
